--- a/graphs.html
+++ b/graphs.html
@@ -3,7 +3,7 @@
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
   <script>
-    d3.json("https://plotly-sandy.vercel.app/data.json", function (err, rows) {
+    d3.json("https://plotly-sandy.vercel.app/data.json", function (rows) {
       console.log(rows);
       if (rows === undefined) alert("could not find data.");
       function unpack(rows, key) {
