--- a/graphs.html
+++ b/graphs.html
@@ -1,7 +1,8 @@
 <head>
   <!-- Load plotly.js into the DOM -->
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script>
     d3.json("https://plotly-sandy.vercel.app/data.json", function (rows) {
       console.log(rows);
