--- a/graphs.html
+++ b/graphs.html
@@ -3,11 +3,25 @@
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
-</head>
-
-<body>
   <script>
-    d3.json("https://plotly-sandy.vercel.app/data.json", function (rows) {
+    d3.csv("https://plotly-sandy.vercel.app/2014_world_gdp_with_codes.csv").get(
+      function (data) {
+        console.log(data);
+      }
+    );
+    d3.json("https://plotly-sandy.vercel.app/data.json", function (ddd) {
+      let rows = [
+        {
+          name: "John",
+          age: 30,
+          city: "New York",
+        },
+        {
+          name: "Jane",
+          age: 20,
+          city: "San Francisco",
+        },
+      ];
       console.log(rows);
       if (rows === undefined) alert("could not find data.");
       function unpack(rows, key) {
@@ -63,5 +77,8 @@
       Plotly.newPlot("myDiv", data, layout, { showLink: false });
     });
   </script>
+</head>
+
+<body>
   <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
 </body>
