--- a/graphs.html
+++ b/graphs.html
@@ -24,6 +24,8 @@
             city: "San Francisco",
           },
         ];
+        console.log("ddd----");
+        console.log(ddd);
         console.log(rows);
         if (rows === undefined) alert("could not find data.");
         function unpack(rows, key) {
