--- a/graphs.html
+++ b/graphs.html
@@ -4,83 +4,135 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script>
-    d3.csv("https://plotly-sandy.vercel.app/2014_world_gdp_with_codes.csv").get(
-      function (data) {
-        console.log(data);
+    d3.csv("https://plotly-sandy.vercel.app/2014_usa_states.csv").get(function (
+      rows
+    ) {
+      console.log(rows);
+      if (rows === undefined) alert("could not find data.");
+      function unpack(rows, key) {
+        return rows.map(function (row) {
+          return row[key];
+        });
       }
-    );
-    d3.json(
-      "https://plotly-sandy.vercel.app/2014_world_gdp_with_codes.csv",
-      function (ddd) {
-        let rows = [
-          {
-            name: "John",
-            age: 30,
-            city: "New York",
-          },
-          {
-            name: "Jane",
-            age: 20,
-            city: "San Francisco",
-          },
-        ];
-        console.log("ddd----");
-        console.log(ddd);
-        console.log(rows);
-        if (rows === undefined) alert("could not find data.");
-        function unpack(rows, key) {
-          return rows.map(function (row) {
-            return row[key];
-          });
-        }
 
-        var data = [
-          {
-            type: "choropleth",
-            locations: unpack(rows, "CODE"),
-            z: unpack(rows, "GDP (BILLIONS)"),
-            text: unpack(rows, "COUNTRY"),
-            colorscale: [
-              [0, "rgb(5, 10, 172)"],
-              [0.35, "rgb(40, 60, 190)"],
-              [0.5, "rgb(70, 100, 245)"],
-              [0.6, "rgb(90, 120, 245)"],
-              [0.7, "rgb(106, 137, 247)"],
-              [1, "rgb(220, 220, 220)"],
-            ],
-            autocolorscale: false,
-            reversescale: true,
-            marker: {
-              line: {
-                color: "rgb(180,180,180)",
-                width: 0.5,
-              },
-            },
-            tick0: 0,
-            zmin: 0,
-            dtick: 1000,
-            colorbar: {
-              autotic: false,
-              tickprefix: "$",
-              title: "GDP<br>Billions US$",
+      var data = [
+        {
+          type: "choropleth",
+          locations: unpack(rows, "CODE"),
+          z: unpack(rows, "GDP (BILLIONS)"),
+          text: unpack(rows, "COUNTRY"),
+          colorscale: [
+            [0, "rgb(5, 10, 172)"],
+            [0.35, "rgb(40, 60, 190)"],
+            [0.5, "rgb(70, 100, 245)"],
+            [0.6, "rgb(90, 120, 245)"],
+            [0.7, "rgb(106, 137, 247)"],
+            [1, "rgb(220, 220, 220)"],
+          ],
+          autocolorscale: false,
+          reversescale: true,
+          marker: {
+            line: {
+              color: "rgb(180,180,180)",
+              width: 0.5,
             },
           },
-        ];
+          tick0: 0,
+          zmin: 0,
+          dtick: 1000,
+          colorbar: {
+            autotic: false,
+            tickprefix: "$",
+            title: "GDP<br>Billions US$",
+          },
+        },
+      ];
 
-        var layout = {
-          title:
-            '2014 Global GDP<br>Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html"> CIA World Factbook</a>',
-          geo: {
-            showframe: false,
-            showcoastlines: false,
-            projection: {
-              type: "mercator",
-            },
+      var layout = {
+        title:
+          '2014 Global GDP<br>Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html"> CIA World Factbook</a>',
+        geo: {
+          showframe: false,
+          showcoastlines: false,
+          projection: {
+            type: "mercator",
           },
-        };
-        Plotly.newPlot("myDiv", data, layout, { showLink: false });
-      }
-    );
+        },
+      };
+      Plotly.newPlot("myDiv", data, layout, { showLink: false });
+    });
+    // d3.json(
+    //   "https://plotly-sandy.vercel.app/2014_world_gdp_with_codes.csv",
+    //   function (ddd) {
+    //     let rows = [
+    //       {
+    //         name: "John",
+    //         age: 30,
+    //         city: "New York",
+    //       },
+    //       {
+    //         name: "Jane",
+    //         age: 20,
+    //         city: "San Francisco",
+    //       },
+    //     ];
+    //     console.log("ddd----");
+    //     console.log(ddd);
+    //     console.log(rows);
+    //     if (rows === undefined) alert("could not find data.");
+    //     function unpack(rows, key) {
+    //       return rows.map(function (row) {
+    //         return row[key];
+    //       });
+    //     }
+
+    //     var data = [
+    //       {
+    //         type: "choropleth",
+    //         locations: unpack(rows, "CODE"),
+    //         z: unpack(rows, "GDP (BILLIONS)"),
+    //         text: unpack(rows, "COUNTRY"),
+    //         colorscale: [
+    //           [0, "rgb(5, 10, 172)"],
+    //           [0.35, "rgb(40, 60, 190)"],
+    //           [0.5, "rgb(70, 100, 245)"],
+    //           [0.6, "rgb(90, 120, 245)"],
+    //           [0.7, "rgb(106, 137, 247)"],
+    //           [1, "rgb(220, 220, 220)"],
+    //         ],
+    //         autocolorscale: false,
+    //         reversescale: true,
+    //         marker: {
+    //           line: {
+    //             color: "rgb(180,180,180)",
+    //             width: 0.5,
+    //           },
+    //         },
+    //         tick0: 0,
+    //         zmin: 0,
+    //         dtick: 1000,
+    //         colorbar: {
+    //           autotic: false,
+    //           tickprefix: "$",
+    //           title: "GDP<br>Billions US$",
+    //         },
+    //       },
+    //     ];
+
+    //     var layout = {
+    //       title:
+    //         '2014 Global GDP<br>Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html"> CIA World Factbook</a>',
+    //       geo: {
+    //         showframe: false,
+    //         showcoastlines: false,
+    //         projection: {
+    //           type: "mercator",
+    //         },
+    //       },
+    //     };
+    //     Plotly.newPlot("myDiv", data, layout, { showLink: false });
+    //   }
+    // );
   </script>
 </head>
 
