--- a/index.html
+++ b/index.html
@@ -480,6 +480,10 @@
                     title: 'Mining',
                     range: [0, 25000], // Set the range of the y-axis
                   },
+                  height: 350,
+                    // width: 600,
+                    showlegend: false,
+                    grid: { rows: 1, columns: 0 },
                 };
                 
                 // Create the plot
@@ -612,6 +616,15 @@ were destroyed to make way for  <span class ="great-damage-text-desc">Mining pur
          </div>
       </div>
     </div>
+    </div>
+
+    <!-- choropleth map -->
+    <div class="container">
+        <div class="row">
+            <div class = "col-md-12">
+                <h1>choropleth map</h1>
+            </div>
+        </div>
     </div>
   </div>
 </div>
